# rose-autotools-template

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac
lib/: Makefile.am
lib/project/: Makefile.am  config.h.in
src/: Makefile.am
src/project/: Makefile.am  config.h.in  func.cpp  main.cpp
tests/: Makefile.am  func_test.cpp
